Change Log
========== 

version 1.1a (incoming)
------------
fix:
- fix display of unused disks (when not partitioned). In 1.1 some partioned disks were also reported as unused disks

layout:
- columns without any values are automatically removed from the layout.
  For example, if you don't have multipath drives, subsequents columns are automatically removed from the final layout
  This behaviour may be disabled using switch -static

enhance:
- new switch -locate allow to blink disk enclosure led for 10 seconds
  This switch works only for drive connected to a sas hba (sas2ircu & sas3ircu compatible controllers)
- switch -multi:<multitype> can be set multiple times.
  For example for listing physical drive only once you can use these arguments: -multi:none -multi:active -nolabel
- new switch "-sort:<columns>" that allow to define the sort order of partitions and devices
- new switch "-static" for prevent columns to be removed even if they are empties.
- new switch "-nolabel" that allow to report only disk information without information about partitions
 
version 1.1 (07/06/2019)
-----------

core:
 - don't use anymore "glabel status"
 - replace "gmultipath status" by "gmultipath list"
 - use "gpart list" for building the partitions table
 - use "gmultipath list" for completing the partitions table & devices with multipath datas

disk type detection:
 - Handle NVME disk detection
 - Handle NVRAM disk detection
 
new columns:
 - column "fs" that show the partition type (freebsd-zfs, freebsd-swap, bios-boot, ...)
 - column "path-state"  that show the multipath state's device (OPTIMAL, ...)
 - column "temp" that show the disk temperature
 - column "zpool-location" that show the location of the partition inside the pool structure (tank/mirror-0, ...)
 
new switches:
 - switch -smartctl that enable to report columns from smartctl tool (like temperature). without this switch theses columns are skipped.
 
updated profil layout: